Fix the bug that the img may be too big

--- a/css/espressos.css
+++ b/css/espressos.css
@@ -298,8 +298,7 @@ main {
             "info divider detail"
             "img divider detail";
         align-items: center;
-        justify-content: center;
-        transition: flex var(--animation-duration);
+        justify-content: center;;
     }
 
     .product-card.expanded .product-info {
@@ -310,23 +309,14 @@ main {
         justify-content: center;
         gap: var(--space-3);
         margin-top: var(--space-2);
-        transition: 
-            display var(--animation-duration),
-            margin-top var(--animation-duration), 
-            font-size var(--animation-duration), 
-            color var(--animation-duration);
     }
 
     .product-card.expanded .product-info h2{
         order: 1;
-        font-size: 3rem;
+        font-size: 2.5rem;
         font-weight: 700;
         color: #000;
         text-align: center;
-        transition: 
-            font-size var(--animation-duration), 
-            color var(--animation-duration),
-            padding var(--animation-duration);
     }
 
     .product-card.expanded .product-info p {
@@ -336,7 +326,6 @@ main {
         font-weight: 400;
         color: #000; 
         text-align: center;
-        transition: font-size var(--animation-duration);
     }
 
     .product-card.expanded .product-info .price {
@@ -408,13 +397,14 @@ main {
     .product-card.expanded .product-info .quantity .minus-icon {
         order: 2;
         margin: 0;
+        cursor: pointer;
     }
 
     .product-card.expanded .product-info .quantity .quantity-number {
         order: 3;
         font-size: 1.5rem;
         font-weight: 700;
-        border: 2px solid #000;
+        border: 3px solid #000;
         padding: var(--space-1);
         border-radius: var(--radius);
     }
@@ -423,6 +413,7 @@ main {
         order: 4;
         transform: rotate(180deg);
         margin: 0;
+        cursor: pointer;
     }
 
     .product-card.expanded .product-info .add-to-cart {
@@ -443,13 +434,16 @@ main {
     .product-card.expanded .product-img {
         grid-area: img;
         display: flex;
+        width: 80%;
+        align-self: center;
+        justify-self: center;
         align-items: center;
         justify-content: center;
         margin-bottom: var(--space-2);
     }
 
     .product-card.expanded .product-img img {
-        object-fit: contain;
+        object-fit: cover;
     }
 
     .product-card.expanded .divider {
@@ -468,6 +462,7 @@ main {
         justify-content: flex-start;
         align-self: center;
         margin: var(--space-2);
+        margin-top: 0;
         gap: var(--space-1);
     }
 
